--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.0.7",
     "sass": "^1.45.1",
     "typescript": "^4.4.4",
