--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "antd": "^4.18.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.5",
